alignment issues in cover fixed

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ right: 10px;
     font-family: Poppins;
     font-weight: 800;
     font-size: 15rem;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-top: 50px; */
+    /* padding-bottom: 50px; */
     text-align: center;
     background-image: url('images/titleMap.jpg');
     background-repeat: no-repeat;
@@ -71,7 +71,7 @@ right: 10px;
     background-size: contain;
     /* background-position: 30%; */
     color: transparent;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     
     
 }
